--- a/index.html
+++ b/index.html
@@ -5,47 +5,47 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
   </HEAD>
-  <body>
-    <header class="aaa">
-      <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <body class="todo-page">
+    <header class="header">
+      <img src="./eisenhower-matrix.jpg" class="header__scheme">
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
-    <main class="centered-main-page-element">
-      <section id="topSectionForAddingElementToList">
-        <h3>Add Item</h3>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+    <main class="main">
+      <section class="add-item">
+        <h3 class="add-item__title block-title">Add Item</h3>
+        <div class="add-item__task-wrapper">
+          <input class="add-item__task task" type="text">
+          <button class="add-item__button button">Add</button>
         </div>
       </section>
-      <section>
-        <h3>Todo</h3>
-        <ul id="incompleteTasks">
-          <li>
-            <input type="checkbox">
-            <label class="task">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete"><img src="./remove.svg"></button>
+      <section class="todo">
+        <h3 class="todo__title block-title">Todo</h3>
+        <ul class="todo__list list">
+          <li class="todo__item item">
+            <input class="item__check" type="checkbox">
+            <label class="item__task">Pay Bills</label>
+            <input type="text" class="item__edit-task task">
+            <button class="item__edit-button button">Edit</button>
+            <button class="item__delete-button button"><img class="item__delete-icon" src="./remove.svg"></button>
           </li>
-          <li class="editMode">
-            <input type="checkbox">
-            <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="edit">Save</button>
-            <button class="delete"><img src="./remove.svg"></button>
+          <li class="todo__item item item_edit">
+            <input class="item__check" type="checkbox">
+            <label class="item__task">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="item__edit-task task">
+            <button class="item__edit-button button">Save</button>
+            <button class="item__delete-button button"><img class="item__delete-icon" src="./remove.svg"></button>
           </li>
         </ul>
       </section>
-      <section>
-        <h3>Completed</h3>
-        <ul id="completed-tasks">
-          <li>
-            <input type="checkbox" checked>
-            <label class="task">See the Doctor</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete"><img src="./remove.svg"></button>
+      <section class="completed">
+        <h3 class="completed__title block-title">Completed</h3>
+        <ul class="completed__list list">
+          <li class="completed__item item">
+            <input class="item__check" type="checkbox" checked>
+            <label class="item__task item_done">See the Doctor</label>
+            <input type="text" class="item__edit-task task">
+            <button class="item__edit-button button">Edit</button>
+            <button class="item__delete-button button"><img class="item__delete-icon" src="./remove.svg"></button>
           </li>
         </ul>
       </section>
