--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <HEAD>
+  <head>
     <title>Todo App</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
-  </HEAD>
+    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+  </head>
   <body class="todo-page">
     <header class="header">
       <img src="./eisenhower-matrix.jpg" class="header__scheme">
@@ -50,6 +50,6 @@
         </ul>
       </section>
     </main>
-    <script SRC="app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
