fix: add alternative content for multimedia according to rule 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="todo-page">
     <header class="header">
-      <img src="./eisenhower-matrix.jpg" class="header__scheme">
+      <img alt="the Eisenhower matrix" src="./eisenhower-matrix.jpg" class="header__scheme">
       <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
@@ -26,14 +26,14 @@
             <label class="item__task">Pay Bills</label>
             <input type="text" class="item__edit-task task">
             <button class="item__edit-button button">Edit</button>
-            <button class="item__delete-button button"><img class="item__delete-icon" src="./remove.svg"></button>
+            <button class="item__delete-button button"><img class="item__delete-icon" alt="delete button" src="./remove.svg"></button>
           </li>
           <li class="todo__item item item_edit">
             <input class="item__check" type="checkbox">
             <label class="item__task">Go Shopping</label>
             <input type="text" value="Go Shopping" class="item__edit-task task">
             <button class="item__edit-button button">Save</button>
-            <button class="item__delete-button button"><img class="item__delete-icon" src="./remove.svg"></button>
+            <button class="item__delete-button button"><img class="item__delete-icon" alt="delete button" src="./remove.svg"></button>
           </li>
         </ul>
       </section>
@@ -45,7 +45,7 @@
             <label class="item__task item_done">See the Doctor</label>
             <input type="text" class="item__edit-task task">
             <button class="item__edit-button button">Edit</button>
-            <button class="item__delete-button button"><img class="item__delete-icon" src="./remove.svg"></button>
+            <button class="item__delete-button button"><img class="item__delete-icon" alt="delete button" src="./remove.svg"></button>
           </li>
         </ul>
       </section>
